--- a/misc/rmd/finemap.Rmd
+++ b/misc/rmd/finemap.Rmd
@@ -9,11 +9,21 @@ opts_chunk$set(dev = "png", dev.args = list(type = "cairo"), dpi = 192, fig.path
 ```
 
 ```{r ex}
+# specify where the FINEMAP tool is located (user-specific)
+# - the user needs to download and install the tool before the analysis
+# - here, the tool binary file is stored in `~/apps/finemap/` directory
+options(finemapr_finemap = "~/apps/finemap/finemap")
+
 # load example data from FINEMAP (http://www.christianbenner.com/)
+# - data are obtained from the same directory `~/apps/finemap/`, subdirectory `example`
 ex <- example_finemap()
 
 # run the tool
-# - simulated data in region 1 assumed 2 causal SNPs
+# - simulated data in region 1 (used here in the analysis) assumed 2 causal SNPs
+# - arg. #1: table with SNP name and Z-score in the first 2 columns
+# - arg. #2: the LD matrix with colnames/rownames corresponding to SNP names
+# - arg. #3: the number of invidivudals
+# - arg. `args`: pass other arguments to the tool as a string 
 out <- run_finemap(ex$tab1, ex$ld1, ex$n1, args = "--n-causal-max 3")
 ```
 
